correções parte 3